change trim() to strip()